[package]
name = "handlr"
version = "0.4.5"
authors = ["greg <gregory.mkv@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Manage mimeapps.list and default applications with ease"

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
clap = "3.0.0-beta.2"
url = "2.1.1"
itertools = "0.9.0"
json = "0.12.4"
shlex = "0.1.1"
thiserror = "1.0.22"
ascii_table = "3.0.1"
xdg = "2.2.0"
mime = "0.3.16"
regex = { version = "1.4.2", default-features = false, features = ["std"] }
mime-db = "1.1.0"
atty = "0.2.14"
confy = "0.4.0"
serde = "1.0.117"
xdg-mime = "0.3.2"
freedesktop_entry_parser = "1.1.0"
once_cell = "1.4.1"

[profile.release]
opt-level=3
lto=true
